verification email - added template, service and updated signup controller

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,16 @@
+#### DATABASE
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/javaLearn
 spring.datasource.username=root
 spring.datasource.password=roma
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.initialize=true
 spring.jpa.show-sql=true
+
+#### MAIL
+spring.mail.host=smtp.mailtrap.io
+spring.mail.port=2525
+spring.mail.username=0fb332d7af5d5e
+spring.mail.password=b592079a8eaf13
+spring.mail.protocol=smtp
