added login authentication

--- a/backend-JavaLearn/pom.xml
+++ b/backend-JavaLearn/pom.xml
@@ -72,6 +72,23 @@
 			<artifactId>springdoc-openapi-security</artifactId>
 			<version>1.6.6</version>
 		</dependency>
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt-api</artifactId>
+			<version>0.11.2</version>
+		</dependency>
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt-impl</artifactId>
+			<scope>runtime</scope>
+			<version>0.11.2</version>
+		</dependency>
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt-jackson</artifactId>
+			<scope>runtime</scope>
+			<version>0.11.2</version>
+		</dependency>
 	</dependencies>
 
 	<build>
