--- a/angular-JavaLearn/package.json
+++ b/angular-JavaLearn/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
     "bootstrap": "^5.1.3",
+    "notiflix": "^3.2.5",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
@@ -35,7 +36,8 @@
     "karma-coverage": "~2.1.0",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
+    "ngx-webstorage": "9.0.0",
     "typescript": "~4.5.2",
-    "ngx-webstorage": "9.0.0"
+    "notiflix": "3.2.5"
   }
 }
