--- a/angular-JavaLearn/package.json
+++ b/angular-JavaLearn/package.json
@@ -18,9 +18,13 @@
     "@angular/platform-browser": "~13.2.0",
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
-    "bootstrap": "^5.1.3",
+    "bootstrap":"5.1.3",
+    "core-js": "3.21.1",
+    "jquery": "^3.6.0",
+    "ngx-bootstrap": "^8.0.0",
     "notiflix": "^3.2.5",
     "rxjs": "~7.5.0",
+    "tether": "^2.0.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
@@ -37,7 +41,7 @@
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
     "ngx-webstorage": "9.0.0",
-    "typescript": "~4.5.2",
-    "notiflix": "3.2.5"
+    "notiflix": "3.2.5",
+    "typescript": "~4.5.2"
   }
 }
