--- a/backend-JavaLearn/src/main/resources/application.properties
+++ b/backend-JavaLearn/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 #### DATABASE
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/javaLearn
+spring.datasource.url=jdbc:mysql://localhost:3306/javaLearnBranch2?createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=roma
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
