jwt config, token generation, validation and authorization filter added

--- a/backend-JavaLearn/src/main/resources/application.properties
+++ b/backend-JavaLearn/src/main/resources/application.properties
@@ -8,6 +8,10 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.initialize=true
 spring.jpa.show-sql=true
 
+### jwt
+app.jwt.secret=RandomSecretKey1234567890!RandomSecretKey1234567890!RandomSecretKey1234567890!RandomSecretKey1234567890!
+app.jwt.expiration-in-ms=3600000 # 1h
+
 #### MAIL
 spring.mail.host=smtp.mailtrap.io
 spring.mail.port=2525
