added refresh token service

--- a/backend-JavaLearn/src/main/resources/application.properties
+++ b/backend-JavaLearn/src/main/resources/application.properties
@@ -11,6 +11,7 @@ spring.jpa.show-sql=true
 ### jwt
 app.jwt.secret=RandomSecretKey1234567890!RandomSecretKey1234567890!RandomSecretKey1234567890!RandomSecretKey1234567890!
 app.jwt.expiration-in-ms=3600000 # 1h
+app.jwt.refresh-expiration-in-ms=86400000 # 24h
 
 #### MAIL
 spring.mail.host=smtp.mailtrap.io
