authentication controller and service changed

--- a/backend-JavaLearn/src/main/resources/application.properties
+++ b/backend-JavaLearn/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 #### DATABASE
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/javaLearnBranch2?createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/javaLearn?createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=roma
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
@@ -10,8 +10,10 @@ spring.jpa.show-sql=true
 
 ### jwt
 app.jwt.secret=RandomSecretKey1234567890!RandomSecretKey1234567890!RandomSecretKey1234567890!RandomSecretKey1234567890!
-app.jwt.expiration-in-ms=3600000 # 1h
-app.jwt.refresh-expiration-in-ms=86400000 # 24h
+# 1h
+app.jwt.expiration-in-ms=3600000
+# 24h
+app.jwt.refresh-expiration-in-ms=86400000
 
 #### MAIL
 spring.mail.host=smtp.mailtrap.io
