fixing some bugs

--- a/backend-JavaLearn/src/main/resources/application.properties
+++ b/backend-JavaLearn/src/main/resources/application.properties
@@ -8,6 +8,8 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.initialize=true
 spring.jpa.show-sql=true
 
+logging.level.org.springframework.web=DEBUG
+
 ### jwt
 app.jwt.secret=RandomSecretKey1234567890!RandomSecretKey1234567890!RandomSecretKey1234567890!RandomSecretKey1234567890!
 # 1h
