added user Controller and service

--- a/backend-JavaLearn/src/main/resources/application.properties
+++ b/backend-JavaLearn/src/main/resources/application.properties
@@ -9,13 +9,14 @@ spring.datasource.initialize=true
 spring.jpa.show-sql=true
 
 logging.level.org.springframework.web=DEBUG
+app.website-link=http://localhost:8080
 
 ### jwt
 app.jwt.secret=RandomSecretKey1234567890!RandomSecretKey1234567890!RandomSecretKey1234567890!RandomSecretKey1234567890!
-# 1h
+# 1h and 24h
 app.jwt.expiration-in-ms=3600000
-# 24h
 app.jwt.refresh-expiration-in-ms=86400000
+
 
 #### MAIL
 spring.mail.host=smtp.mailtrap.io
@@ -23,3 +24,4 @@ spring.mail.port=2525
 spring.mail.username=0fb332d7af5d5e
 spring.mail.password=b592079a8eaf13
 spring.mail.protocol=smtp
+
