--- a/angular-JavaLearn/package.json
+++ b/angular-JavaLearn/package.json
@@ -21,6 +21,7 @@
     "bootstrap": "5.1.3",
     "core-js": "3.21.1",
     "jquery": "^3.6.0",
+    "jwt-decode": "^3.1.2",
     "ngx-bootstrap": "^8.0.0",
     "notiflix": "^3.2.5",
     "rxjs": "~7.5.0",
